hubSide/force-app/main/default/objects/SFAMConfig__c/SFAMConfig__c.object-meta.xml
<CustomObject>
    <description>Custom object defining the permission / profile / role to assign to a user when created.</description>
    <label>Config SFAM</label>
    <nameField>
        <label>Config SFAM Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configs SFAM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>