hubSide/force-app/main/default/objects/SFAMConfig__c/fields/Case_Typologie_sinistre__c.field-meta.xml
<CustomField>
    <fullName>Case_Typologie_sinistre__c</fullName>
    <description>Typologie des requêtes</description>
    <label>Case_Typologie_sinistre</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Case_Typologie</valueSetName>
    </valueSet>
</CustomField>