hubSide/force-app/main/default/objects/SFAMConfig__c/fields/Colis_Statut__c.field-meta.xml
<CustomField>
    <fullName>Colis_Statut__c</fullName>
    <label>Colis_Statut</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Colis_Status</valueSetName>
    </valueSet>
</CustomField>