hubSide/force-app/main/default/objects/SFAMConfig__c/fields/DocumentRemoval__c.field-meta.xml
<CustomField>
    <fullName>DocumentRemoval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suppression Document</label>
    <type>Checkbox</type>
</CustomField>