hubSide/force-app/main/default/objects/SFAMConfig__c/fields/Equipement_sinistre_Sous_statut__c.field-meta.xml
<CustomField>
    <fullName>Equipement_sinistre_Sous_statut__c</fullName>
    <label>EquipSin - Sous-statut</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EquipSin_SousStatut</valueSetName>
    </valueSet>
</CustomField>