hubSide/force-app/main/default/objects/SFAMConfig__c/fields/Equipement_sinistre_Statut_equipement__c.field-meta.xml
<CustomField>
    <fullName>Equipement_sinistre_Statut_equipement__c</fullName>
    <description>Statut de l&apos;équipement sinistré - Equipement sinistré status</description>
    <label>EquipSin - Statut</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EquipSin_Statut</valueSetName>
    </valueSet>
</CustomField>