hubSide/force-app/main/default/objects/SFAMConfig__c/fields/Task_Type_Action__c.field-meta.xml
<CustomField>
    <fullName>Task_Type_Action__c</fullName>
    <label>Task_Type_Action</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Activity_TypeAction</valueSetName>
    </valueSet>
</CustomField>