hubSide/force-app/main/default/objects/SFAMConfig__c/fields/UserBusinessProfile__c.field-meta.xml
<CustomField>
    <fullName>UserBusinessProfile__c</fullName>
    <description>Profil métier - User&apos;s business profile</description>
    <label>Utilisateur - Profil métier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UserBusinessProfile</valueSetName>
    </valueSet>
</CustomField>