hubSide/force-app/main/default/objects/SFAMConfig__c/fields/UserPermissionSet__c.field-meta.xml
<CustomField>
    <fullName>UserPermissionSet__c</fullName>
    <description>Permission set tel que défini dans Salesforce - Permission Set as defined in Salesforce</description>
    <label>Utilisateur - Permission set</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>API_Only</fullName>
            </value>
            <value>
                <fullName>cases_Permisssion_Set</fullName>
            </value>
            <value>
                <fullName>ManagerDirectionLogistique</fullName>
            </value>
            <value>
                <fullName>PS_ADM_agent</fullName>
            </value>
            <value>
                <fullName>PS_ADM_Manager</fullName>
            </value>
            <value>
                <fullName>PS_Back_Agent</fullName>
            </value>
            <value>
                <fullName>PS_Back_Manager</fullName>
            </value>
            <value>
                <fullName>PS_Direction_QualiteSinistre</fullName>
            </value>
            <value>
                <fullName>PS_FEA_ReportDsh</fullName>
            </value>
            <value>
                <fullName>PS_GSIN_Gestionnaire</fullName>
            </value>
            <value>
                <fullName>PS_GSIN_Manager</fullName>
            </value>
            <value>
                <fullName>PS_LOG_AGENT</fullName>
            </value>
            <value>
                <fullName>PS_LOG_EXP_AGENT</fullName>
            </value>
            <value>
                <fullName>PS_LOG_EXP_MANAGER</fullName>
            </value>
            <value>
                <fullName>PS_LOG_EXPD_AGENT</fullName>
            </value>
            <value>
                <fullName>PS_LOG_EXPD_MANAGER</fullName>
            </value>
            <value>
                <fullName>PS_LOG_MANAGER</fullName>
            </value>
            <value>
                <fullName>PS_LOG_REC</fullName>
            </value>
            <value>
                <fullName>PS_ManagerGSQualite</fullName>
            </value>
            <value>
                <fullName>PS_REP_ADM_AGENT</fullName>
            </value>
            <value>
                <fullName>PS_REP_ADM_MANAGER</fullName>
            </value>
            <value>
                <fullName>PS_REP_MANAGER</fullName>
            </value>
            <value>
                <fullName>PS_TCSIN_MANAGER</fullName>
            </value>
            <value>
                <fullName>SFAM_creation_Produit</fullName>
            </value>
            <value>
                <fullName>SFAM_Read_Only</fullName>
            </value>
            <value>
                <fullName>SFAMGestionnaireJuridique</fullName>
            </value>
            <value>
                <fullName>SFAMManagerQualite</fullName>
            </value>
            <value>
                <fullName>SFAMTCQualite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>