hubSide/force-app/main/default/objects/SFAMConfig__c/fields/UserPermissionSetId__c.field-meta.xml
<CustomField>
    <fullName>UserPermissionSetId__c</fullName>
    <description>Id de la permission set assignée à l&apos;utilisateur - User&apos;s Salesforce permission set id</description>
    <label>Utilisateur - Permission set id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>