hubSide/force-app/main/default/objects/SFAMConfig__c/fields/UserProfile__c.field-meta.xml
<CustomField>
    <fullName>UserProfile__c</fullName>
    <description>Profil tel que défini dans salesforce - Profile as defined in Salesforce</description>
    <label>Utilisateur - Profil</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SFAM Expertise</fullName>
            </value>
            <value>
                <fullName>SFAM Stock</fullName>
            </value>
            <value>
                <fullName>SFAM Reparation</fullName>
            </value>
            <value>
                <fullName>SFAM Logistique</fullName>
            </value>
            <value>
                <fullName>SFAM API</fullName>
            </value>
            <value>
                <fullName>SFAM GS</fullName>
            </value>
            <value>
                <fullName>SFAM Qualite</fullName>
            </value>
            <value>
                <fullName>SFAM TC</fullName>
            </value>
            <value>
                <fullName>SFAM Vendeur TC</fullName>
            </value>
            <value>
                <fullName>Profil TC</fullName>
            </value>
            <value>
                <fullName>Profil GS</fullName>
            </value>
            <value>
                <fullName>SFAM ADM</fullName>
            </value>
            <value>
                <fullName>SFAM Vendeur</fullName>
            </value>
            <value>
                <fullName>SFAM Manager</fullName>
            </value>
            <value>
                <fullName>SFAM Admin Produit</fullName>
            </value>
            <value>
                <fullName>System Administrator</fullName>
            </value>
            <value>
                <fullName>Standard User</fullName>
            </value>
            <value>
                <fullName>Read Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>