hubSide/force-app/main/default/objects/SFAMConfig__c/fields/UserProfileId__c.field-meta.xml
<CustomField>
    <fullName>UserProfileId__c</fullName>
    <description>Id Salesforce du profil utilisateur - User&apos;s Salesforce profile id</description>
    <label>Utilisateur - Id profil</label>
    <length>50</length>
    <type>Text</type>
</CustomField>