hubSide/force-app/main/default/objects/SFAMConfig__c/fields/UserRole__c.field-meta.xml
<CustomField>
    <fullName>UserRole__c</fullName>
    <description>Role tel que défini dans Salesforce - Role as defined in Salesforce</description>
    <label>Utilisateur - Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Admin_Enseigne</fullName>
                <label>Admin Enseigne</label>
            </value>
            <value>
                <fullName>Direction_ADM</fullName>
                <label>Direction ADM</label>
            </value>
            <value>
                <fullName>Direction_Back_up</fullName>
                <label>Direction Back-up</label>
            </value>
            <value>
                <fullName>Direction_Exp_dition</fullName>
                <label>Direction Expédition</label>
            </value>
            <value>
                <fullName>Direction_Expertise_SAV_suite_change</fullName>
                <label>Direction Expertise - SAV suite à échange</label>
            </value>
            <value>
                <fullName>Direction_Gestion_Sinistre</fullName>
                <label>Direction Gestion Sinistre</label>
            </value>
            <value>
                <fullName>Direction_GS_Qualit</fullName>
                <label>Direction GS Qualité</label>
            </value>
            <value>
                <fullName>Direction_Logistique</fullName>
                <label>Direction Logistique</label>
            </value>
            <value>
                <fullName>Direction_R_ception_colis</fullName>
                <label>Direction Réception colis</label>
            </value>
            <value>
                <fullName>Direction_R_paration</fullName>
                <label>Direction Réparation</label>
            </value>
            <value>
                <fullName>Direction_R_paration_ADM</fullName>
                <label>Direction Réparation ADM</label>
            </value>
            <value>
                <fullName>Direction_TC_Qualit</fullName>
                <label>Direction TC Qualité</label>
            </value>
            <value>
                <fullName>Direction_Teleconseiller_Sinistre</fullName>
                <label>Direction Téléconseiller Sinistre</label>
            </value>
            <value>
                <fullName>Equipe_1_ADM</fullName>
                <label>Equipe 1 ADM</label>
            </value>
            <value>
                <fullName>Equipe_1_Back_up</fullName>
                <label>Equipe 1 Back-up</label>
            </value>
            <value>
                <fullName>Equipe_1_Exp_dition</fullName>
                <label>Equipe 1 Expédition</label>
            </value>
            <value>
                <fullName>Equipe_1_EXP_SAV_suite_change</fullName>
                <label>Equipe 1 EXP - SAV suite à échange</label>
            </value>
            <value>
                <fullName>Equipe_1_GS</fullName>
                <label>Equipe 1 GS</label>
            </value>
            <value>
                <fullName>Equipe_1_GS_Qualit</fullName>
                <label>Equipe 1 GS Qualité</label>
            </value>
            <value>
                <fullName>Equipe_1_Logistique</fullName>
                <label>Equipe 1 Logistique</label>
            </value>
            <value>
                <fullName>Equipe_1_R_ception_colis</fullName>
                <label>Equipe 1 Réception colis</label>
            </value>
            <value>
                <fullName>Equipe_1_R_paration</fullName>
                <label>Equipe 1 Réparation</label>
            </value>
            <value>
                <fullName>Equipe_1_R_paration_ADM</fullName>
                <label>Equipe 1 Réparation ADM</label>
            </value>
            <value>
                <fullName>Equipe_1_TC</fullName>
                <label>Equipe 1 TC</label>
            </value>
            <value>
                <fullName>Equipe_1_TC_Qualit</fullName>
                <label>Equipe 1 TC Qualité</label>
            </value>
            <value>
                <fullName>Equipe_2_ADM</fullName>
                <label>Equipe 2 ADM</label>
            </value>
            <value>
                <fullName>Equipe_2_Back_up</fullName>
                <label>Equipe 2 Back-up</label>
            </value>
            <value>
                <fullName>Equipe_2_Exp_dition</fullName>
                <label>Equipe 2 Expédition</label>
            </value>
            <value>
                <fullName>Equipe_2_EXP_SAV_suite_change</fullName>
                <label>Equipe 2 EXP - SAV suite à échange</label>
            </value>
            <value>
                <fullName>Equipe_2_GS</fullName>
                <label>Equipe 2 GS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>