hubSide/force-app/main/default/objects/SFAMConfig__c/fields/UserRoleId__c.field-meta.xml
<CustomField>
    <fullName>UserRoleId__c</fullName>
    <description>Id du role utilisateur - Salesforce role id</description>
    <label>Utilisateur - Id Role</label>
    <length>50</length>
    <type>Text</type>
</CustomField>