hubSide/force-app/main/default/objects/SFAMConfig__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>UserBusinessProfile__c</columns>
    <columns>UserProfile__c</columns>
    <columns>UserRole__c</columns>
    <columns>UserPermissionSet__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>