hubSide/force-app/main/default/objects/SFAMConfig__c/listViews/Profils_metier.listView-meta.xml
<ListView>
    <fullName>Profils_metier</fullName>
    <columns>NAME</columns>
    <columns>UserProfile__c</columns>
    <columns>UserRole__c</columns>
    <columns>UserPermissionSet__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UserBusinessProfile__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Profils métier</label>
</ListView>