hubSide/force-app/main/default/objects/SFAMConfig__c/listViews/Record_types.listView-meta.xml
<ListView>
    <fullName>Record_types</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UserBusinessProfile__c</field>
        <operation>equals</operation>
    </filters>
    <label>Record types</label>
</ListView>